<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/timerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/start_timer"
        app:srcCompat="@mipmap/start_button"
        android:background="@android:color/transparent"
        android:scaleY="1.5"
        android:scaleX="1.5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/timerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"/>

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/total_time" />

        <TextView
            android:id="@+id/totalTimeUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/editorTimerView"
        android:paddingTop="8dp"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/dot_editor"
        android:background="@android:color/transparent"/>
</LinearLayout>